--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "11-dars, uyga-vazifa, Project with Cache",
+  "name": "project",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Abdulboriy Mahamatjanov",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -21,8 +21,24 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.1.1",
+    "@prisma/client": "^6.6.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/nodemailer": "^6.4.17",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "device-detector-js": "^3.0.3",
+    "multer": "^1.4.5-lts.2",
+    "nestjs-cloudinary": "^2.1.1",
+    "nodemailer": "^6.10.0",
+    "otplib": "^12.0.1",
+    "prisma": "^6.6.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
